--- a/src/static/xss-1/style.css
+++ b/src/static/xss-1/style.css
@@ -13,6 +13,25 @@ h1 {
 
 .flex-container {
     display: flex;
+    align-items: flex-start;
+}
+
+.profile-container {
+    margin-left: auto;
+    margin: 5px;
+    padding: 5px;
+    width: 10vw;
+}
+
+.username {
+    font-weight: bold;
+    margin: 0.5em 0;
+}
+
+.reviews-container {
+    flex-grow: 5;
+    
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -62,11 +81,6 @@ h1 {
     width: 40vw;
     margin: 10px;
     padding: 5px;
-}
-
-.review .username {
-    font-weight: bold;
-    margin: 0.5em 0;
 }
 
 .submit-container {
