--- a/src/static/auth-1/style.css
+++ b/src/static/auth-1/style.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 .cart {
-  padding: 20px 5%;
+  padding: 40px;
 }
 
 .cart-item {
@@ -19,8 +19,9 @@ html, body {
 
   width: 100%;
   margin: 20px 0;
-  padding: 2em;
-  box-shadow: 2px 2px 6px #888888;
+  padding: 30px;
+  border-radius: 20px;
+  background-color: #F4F7F8;
 }
 
 .cart-item img {
@@ -31,12 +32,19 @@ html, body {
 .title {
   font-size: 1.8em;
   font-weight: bold;
-
-  margin: 1em 0;
+  margin-top: 1rem;
 }
 
 .subtitle {
-  font-size: 1.2em;
+  font-size: 0.9rem;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  background-color: teal;
+  padding: 5px 10px;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  display: inline-block;
 }
 
 .cart-btn-container {
